Changelog document

$Id: Changelog,v 1.31 2004-11-29 09:29:00 oops Exp $

Warn: date format is Y.m.d
* v1.0.0
  - 2004.11.29
    by JoungKyun Kim :
       - redirect stderr error messages
       - fixed subject prase bug when not include charset

  - 2004.11.28
    by JoungKyun Kim :
       - start 1.0.0 development
       - rewirte byspam code
       - Don't need Mailtools module any more.
         added package Common.pm
         added package Encode.pm
         added package Geotop.pm
         added package Mail.pm
         added package Parse.pm
       - add no body/no header check option

* v0.2.5
  - 2004.11.27
    by JoungKyun Kim :
       freeze code and 0.2.5 stop

  - 2004.05.28
    by JoungKyun Kim :
      - enable view with direct file path on byspamTrash
      - enable user define subject length with BYLEN=80
        environment variable on byspamTrash
      - enable view From address with BYFROM environment
        variable on byspamTrash

* v0.2.4
  - 2004.04.04
    by JoungKyun Kim :
      - changed print format on trash file list

  - 2004.02.09
    by JoungKyun Kim :
      - update noContentChk function

  - 2004.02.06
    by JoungKyun Kim :
      - update filter

  - 2004.02.03
    by JoungKyun Kim :
      - rewrite code to ignore filter-allow filter

  - 2003.11.20
    by JoungKyun Kim :
      - fixed can't excute ignore mode on extra mode
        added verbose messages

  - 2003.09.21
    by JoungKyun Kim :
      - fixed miss operation on allow filter
      - removed getBodyTrash function
      - update getBody function

  - 2003.09.09
    by JoungKyun Kim :
      - fixed typo
      - if given -d option, print newline

  - 2003.09.08
    by JoungKyun Kim :
      - update byspamTrash which print date and from

* v0.2.3
  - 2003.06.11
    by JoungKyun Kim :
      - changed sed to perl on install script
      - add ignore filter-allow mode to filter-ignore

  - 2002.11.01
    by JoungKyun Kim :
      - fixed multipart content type check
